--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-carousel": "^1.0.25"
+	}
 }
